# FastAPI_TDD

./: .env  README.md  main.py  pyproject.toml
store/: main.py  routers.py
store/controllers/: product.py
store/core/: config.py  exceptions.py
store/db/: postgres.py
store/models/: base.py  product.py
store/schemas/: base.py  product.py
store/usecases/: product.py
tests/: conftest.py  factories.py
tests/controllers/: test_product.py
tests/schemas/: test_product.py
tests/usecases/: test_product.py
